--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["blog", "post"],
+  "keywords": [
+    "blog",
+    "post"
+  ],
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "markdown-it": "^14.1.0",
